--- a/package.json
+++ b/package.json
@@ -2,7 +2,19 @@
   "name": "js_boilerplate",
   "version": "1.0.0",
   "description": "JavaScript development environment",
-  "scripts": {},
+  "scripts": {
+    "prestart": "babel-node buildScripts/startMessage.js",
+    "start": "npm-run-all --parallel security-check open:src",
+    "open:src": "babel-node buildScripts/srcServer.js",
+    "security-check": "nsp check",
+    "localtunnel": "lt --port 3000",
+    "share": "npm-run-all --parallel open:src localtunnel"
+  },
+  "babel": {
+    "presets": [
+      "latest"
+    ]
+  },
   "author": "Mugur (Bud) Chirica",
   "license": "MIT",
   "dependencies": {
