--- a/.editorconfig
+++ b/.editorconfig
@@ -10,11 +10,8 @@ insert_final_newline = true
 
 # Matches multiple files with brace expansion notation
 # Set default charset
-[*.{js,py}]
+[*.{rb,css,js,html}]
 charset = utf-8
-
-# 2 space indentation
-[*.{rb,css,js}]
 indent_style = space
 indent_size = 2
 
